--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,25 +4,12 @@
 @import "@{libpath}/components/form-file.less";
 @import "@{themepath}/gradient/uikit.less";
 
-.has-file {
-	.is-file {
-	    position: relative;
-	    overflow: hidden;
+.uk-button-group {
+	.q-button-label {
+		&:extend(.uk-button-small);
+		&:extend(.uk-button:disabled);
+		color: @button-color;
 	}
 
-	input[type=file] {
-	    position: absolute;
-	    top: 0;
-	    right: 0;
-	    min-width: 100%;
-	    min-height: 100%;
-	    font-size: 100px;
-	    text-align: right;
-	    filter: alpha(opacity=0);
-	    opacity: 0;
-	    outline: none;
-	    background: white;
-	    cursor: inherit;
-	    display: block;
-	}
+	.uk-button:extend(.uk-button-small) {};
 }
