Style inputs inside button groups.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,5 +11,10 @@
 		color: @button-color;
 	}
 
-	.uk-button:extend(.uk-button-small) {};
+	.uk-button:extend(.uk-button-small) {}
+
+	input[type] {
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+	}
 }
